# melpa-gpl-snapshot

./: Affero.txt  All-git-recipes.txt  GPLed-projects.txt  README.md  build.sh  ok-projects.txt  package-status.txt
elpa/: layout.css
elpa.gnu.org/: index.html
files/4clojure.el/: 4clojure.el
files/ac-anaconda/: Cask  ac-anaconda.el
files/angularjs-mode/: README.md
files/bbdb-handy/: bbdb-handy.el
files/bitly-el/: bitly.el
files/company-tern/: company-tern.el
files/darcula-theme-emacs/: README.md
files/dired-single/: README.md  dired-single.el
files/drill-instructor-AZIK-force.el/: drill-instructor-AZIK-force-pkg.el
files/e2wm-pkgex4pl/: README.org  e2wm-pkgex4pl.el
files/easy-lentic/: README.md
files/edbi-database-url/: README.rst  edbi-database-url.el
files/emacs-gom-mode/: gom-mode.el
files/emacs-multi-compile/: README.md  multi-compile.el
files/emacs-phpcbf/: phpcbf.el
files/emacs-system-specific-settings/: system-specific-settings.el
files/emacsshot/: emacsshot.el
files/ensime-emacs/: .drone.yml  Cask  README.md  ensime-inspector.el  ensime-mode.el  ensime-startup.el  ensime-test.el  ensime.el
files/envdir-mode/: .gitignore  Cask  README.rst  envdir.el
files/evm.el/: .gitignore  README.md
files/flycheck-protobuf/: Cask  flycheck-protobuf.el
files/flycheck-purescript/: Cask  README.md  flycheck-purescript.el
files/flymake-vala/: README.md  flymake-vala.el
files/frame-restore.el/: .gitignore  Cask
files/git-lens/: git-lens.el
files/gitty/: gitty.el
files/gnus-summary-ext/: gnus-summary-ext.el
files/helm-company/: helm-company.el
files/helm-growthforecast/: .gitignore  helm-growthforecast.el
files/helm-img-tiqav/: README.md
files/helm-sheet/: helm-sheet.el
files/how-many-lines-in-project/: how-many-lines-in-project.el
files/i2b2-mode/: i2b2-mode.el
files/immutant-server.el/: immutant-server.el
files/inline-crypt-el/: README.org  inline-crypt-pkg.el  inline-crypt.el  makefile
files/ipretty/: README.md  ipretty.el
files/isgd.el/: isgd.el
files/jknav.el/: jknav.el
files/lit-mode/: lit-mode.el
files/metascript-mode/: .gitignore  .travis.yml
files/minibuf-isearch/: README.md
files/mip-mode/: mip-mode.el
files/mo-git-blame/: mo-git-blame.el
files/nemerle/: GacReg.cmd
files/never-comment/: README.org  never-comment.el
files/opam.el/: README.md  opam.el
files/org-impress-js.el/: .gitignore  README.org
files/org-mobile-sync/: README.md  org-mobile-sync.el
files/org-toodledo/: .gitignore  .travis.yml  Cask  ChangeLog
files/php-boris-minor-mode/: README.org  php-boris-minor-mode.el
files/pillar-mode/: CONTRIBUTING.md
files/plantuml-mode/: .gitignore  Cask  README.org  plantuml-mode.el
files/plsense-direx/: README-ja.org  README.org  plsense-direx.el
files/pycarddavel/: .gitignore  README.md
files/qml-mode/: qml-mode.el
files/rcirc-alertify/: rcirc-alertify.el
files/rigid-tabs.el/: README.rst  rigid-tabs.el
files/rope-read-mode/: README.md  compile-docu.org  rope-read-mode.el
files/scheme-here/: scheme-here.el
files/scpaste/: README.md  scpaste.el
files/scratches/: README.md
files/sibilant-mode/: README.md  sibilant-mode.el
files/signature/: signature-api.el  signature-display.el  signature-markers.el  signature.el
files/simple-rtm/: README.md
files/sqlite.el/: .gitignore  sqlite.el
files/subatomic256/: README.md
files/tc/: README.md  eelll.el  guess  tc-bushu.el  tc-image.el  tc-inst.el  tc-is22.el  tc-is243.el  tc-jiscode.el  tc-mazegaki.el  tc-mkmzdic.el  tc-setup.el  tc-stat.el  tc-sysdep.el  tc-tbl.el  tc-util.el  try-tbl.el  ttc-ltbl.el  ttc-tbl.el  tutc-tbl.el
files/tdd-status-mode-line/: .gitignore  Makefile
files/tern-django/: .gitignore  (+8 more)
melpa/: .search.sh.swp  GPLed.txt  ok-projects.txt  package-status.txt  r.sh  recipes-deleted.txt  recipes-kept.txt  search.sh
melpa/working/zeitgeist/: .bzrignore  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
melpa/working/zeitgeist/bzr/: Makefile.am  README  __init__.py  hooks.py
melpa/working/zeitgeist/chrome/: Makefile.am  background.html  content_script.js  manifest.json  plugin  zeitgeist.js
melpa/working/zeitgeist/emacs/: Makefile.am  README  zeitgeist.el
melpa/working/zeitgeist/firefox/: Makefile.am  README
melpa/working/zeitgeist/firefox-36-libzg/: Makefile.am  README
melpa/working/zeitgeist/firefox-36-libzg/extension/: Makefile.am  chrome.manifest  install.rdf
melpa/working/zeitgeist/firefox-36-libzg/extension/chrome/content/: zeitgeist.xul
melpa/working/zeitgeist/firefox-36-libzg/extension/components/: Makefile.am  ZeitgeistComponent.cpp  ZeitgeistModule.cpp  zeitgeist.idl  zeitgeistextend.h
melpa/working/zeitgeist/firefox-36-libzg/extension/defaults/preferences/: zeitgeist.js
melpa/working/zeitgeist/firefox/extension/: Makefile.am  chrome.manifest  install.rdf
melpa/working/zeitgeist/firefox/extension/chrome/content/: event.js  module.js
melpa/working/zeitgeist/geany/: Makefile.am  zeitgeist_dataprovider.c
melpa/working/zeitgeist/monodevelop/: AssemblyInfo.cs  Makefile.am  MonoDevelop.Zeitgeist.addin.xml  StartupHandler.cs  TrackedDocument.cs  ZeitgeistClient.cs
melpa/working/zeitgeist/npapi-plugin/: Makefile.am  np-zeitgeist.cc
melpa/working/zeitgeist/telepathy/: AUTHORS  INSTALL  Makefile.am  Zeitgeist.client  org.freedesktop.Telepathy.Client.Zeitgeist.service  zeitgeist-telepathy-observer
melpa/working/zeitgeist/thunderbird/: Makefile.am  README
melpa/working/zeitgeist/thunderbird/extension/: Makefile.am  chrome.manifest  install.rdf
melpa/working/zeitgeist/thunderbird/extension/chrome/content/: event.js  module.js  zeitgeist.xul
melpa/working/zeitgeist/thunderbird/extension/defaults/preferences/: prefs.js
melpa/working/zeitgeist/tomboy/: AssemblyInfo.cs  Makefile.am  NoteHandler.cs  Zeitgeist.cs  ZeitgeistAddin.cs  ZeitgeistDataprovider.addin.xml
melpa/working/zeitgeist/vim/: Makefile.am
melpa/working/zeitgeist/xchat/: Makefile.am  README  zeitgeist-dataprovider.c
orgmode.org/: build-org-pkg.txt  index.html  org-20150406.tar
(+555 files in other folders)
