servicedir = ${datadir}/dbus-1/services
nodist_service_DATA = org.freedesktop.Telepathy.Client.Zeitgeist.service

appdir = ${datadir}/telepathy/clients
app_DATA = Zeitgeist.client

bin_SCRIPTS = zeitgeist-telepathy-observer

EXTRA_DIST = \
			 zeitgeist-telepathy-observer \
			 org.freedesktop.Telepathy.Client.Zeitgeist.service \
			 Zeitgeist.client

local-install:
	@echo "Telepathy: local-install not implemented"

local-uninstall:
	@echo "Telepathy: local-uninstall not implemented"
